fix: text overflow in menu items

--- a/docs/_static/css/custom.css
+++ b/docs/_static/css/custom.css
@@ -117,6 +117,8 @@ body,
   color: var(--color-primary);
   font-weight: bold;
   font-size: var(--size-left-nav-title);
+  white-space: normal;
+  height: fit-content;
 }
 
 /* Selecting the vertical menu anchor elements */
